add Linkedin profile

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
   <style>
 h1 {text-align: center;}
 h2 {text-align: center;}
+h4 {text-align: center;}
 div {text-align: center;}
 ul {
 text-align: left;
@@ -33,6 +34,7 @@ body {
 <body>
   
     <h1>Predictive model of a process University selection</h1> 
+    <h4>This app was created by Freddy F. Tapia C., to see my Lindedin profile click <a href="https://www.linkedin.com/in/freddy-f-tapia-c-667345a4/" target="_blank">here</a>.</h4>
     <h2>This model will predict whether candidates would get admitted to a prestigious university.</h2>
     
     
